[build-system]
requires = [
    "setuptools >= 42",  # At least v42 of setuptools required!
    "versioningit ~= 1.1.1",
    "future",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
log_cli =  false

[tool.coverage.run]
branch = true
source = ["mavconn"]
omit = [
    "docs",
    "tests",
    ".tox",
]

[tool.coverage.paths]
source = ["mavconn"]

[tool.coverage.report]
fail_under = 99
show_missing = true

[tool.versioningit]

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}"

[tool.versioningit.write]
file = "mavconn/_version.py"
