[metadata]
name = mavconn
version = attr: mavconn.__version__
url = https://github.com/shamuproject/mavconn
author = Severyn Polakiewicz
#author_email = severynpolakiewicz@colorado.edu
maintainer = Stephen Arnold
maintainer_email = nerdboy@gentoo.org
description = Asynchronous MAVLink connection library.
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
license = GPLv2
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Intended Audience :: Developers
    Programming Language :: Python
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing

[options]
python_requires = >= 3.6
install_requires =
    pymavlink
    future

packages = find:
package_dir =
    =.

[options.packages.find]
exclude =
    tests
    docs

[options.extras_require]
doc =
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest
    pytest-mock
    freezegun
    future
cov =
    pytest-cov
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist
    docs
    tests

max-line-length = 90
